--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.excellence.retrofitutils.MainActivity">
+    tools:context="com.excellence.retrofit.sample.MainActivity">
 
     <GridView
         android:id="@+id/gridview"
